--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   ],
   "peerDependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "@emotion/core": "^10.0.35"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -117,9 +116,8 @@
     ]
   },
   "dependencies": {
+    "@babel/runtime": "^7.11.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "@emotion/core": "^10.0.35",
-    "@babel/runtime": "^7.11.2"
+    "react-dom": "^16.13.1"
   }
 }
