--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "repository": "git@github.com:hrdtbs/bezier-editor.git",
   "author": "hrdtbs <harada.tsubasa.0422@gmail.com>",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "main": "dist/index.cjs.js",
   "jsnext:main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
